@@ -1,21 +1,0 @@
-pref("extensions.firegpg.gmail_butons_sign", true);
-pref("extensions.firegpg.gmail_butons_sign_send", true);
-pref("extensions.firegpg.gmail_butons_crypt", true);
-pref("extensions.firegpg.gmail_butons_crypt_send", true);
-pref("extensions.firegpg.gmail_butons_sign_crypt", true);
-pref("extensions.firegpg.gmail_butons_sign_crypt_send", true);
-pref("extensions.firegpg.gmail_enabled", true);
-pref("extensions.firegpg.default_private_key", "");
-pref("extensions.firegpg.gpg_path", "");
-pref("extensions.firegpg.specify_gpg_path", false);
-pref("extensions.firegpg.show_website", true);
-pref("extensions.firegpg.result_always_in_new_window", false);
-pref("extensions.firegpg.use_gpg_agent", false);
-pref("extensions.firegpg.default_memory", true);
-pref("browser.preferences.animateFadeIn", false);
-pref("browser.preferences.instantApply", false);
-pref("extension.firegpg.gpgauth.global.enable_gpgauth", true);
-pref("extensions.firegpg.no_updates", false);
-pref("extensions.firegpg.enable_gpgapi", true);
-pref("extensions.firegpg.gmail_butons_use_select", false);
-pref("extensions.firegpg.activate_inline", true);
